--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="card">
             <div class="cat-image">
               <a class="link_category_product" href="#">
-                <img decoding="async" src="./images/img/pizza.avif" class="img-fluid">
+                <img decoding="async" src="./images/pizza.avif" class="img-fluid">
               </a>
             </div>
             <div class="cat-title">
@@ -91,7 +91,7 @@
           <div class="card">
             <div class="cat-image">
               <a class="link_category_product" href="#">
-                <img decoding="async" src="./images/img/sauces.jpg" class="img-fluid">
+                <img decoding="async" src="./images/sauces.jpg" class="img-fluid">
               </a>
             </div>
             <div class="cat-title">
@@ -104,7 +104,7 @@
           <div class="card">
             <div class="cat-image">
               <a class="link_category_product" href="#">
-                <img decoding="async" src="./images/img/combo.jpg" class="img-fluid">
+                <img decoding="async" src="./images/combo.jpg" class="img-fluid">
               </a>
             </div>
             <div class="cat-title">
@@ -117,7 +117,7 @@
           <div class="card">
             <div class="cat-image">
               <a class="link_category_product" href="#">
-                <img decoding="async" src="./images/img/kids.webp" class="img-fluid">
+                <img decoding="async" src="./images/kids.webp" class="img-fluid">
               </a>
             </div>
             <div class="cat-title">
@@ -130,7 +130,7 @@
           <div class="card">
             <div class="cat-image">
               <a class="link_category_product" href="#">
-                <img decoding="async" src="./images/img/chicken.webp" class="img-fluid">
+                <img decoding="async" src="./images/chicken.webp" class="img-fluid">
               </a>
             </div>
             <div class="cat-title">
@@ -143,7 +143,7 @@
           <div class="card">
             <div class="cat-image">
               <a class="link_category_product" href="#">
-                <img decoding="async" src="./images/img/box.avif" class="img-fluid">
+                <img decoding="async" src="./images/box.avif" class="img-fluid">
               </a>
             </div>
             <div class="cat-title">
@@ -163,7 +163,7 @@
         <div class="row align-items-center">
           <div class="col-lg-7 col-md-12 mb-lg-0 mb-5">
             <div class="card border-0">
-              <img decoding="async" src="images/img/img-1.png" class="img-fluid">
+              <img decoding="async" src="images/img-1.png" class="img-fluid">
             </div>
           </div>
           <div class="col-lg-5 col-md-12 text-sec">
@@ -195,7 +195,7 @@
           </div>
           <div class="col-lg-7 col-md-12">
             <div class="card border-0">
-              <img decoding="async" src="images/img/img-2.png" class="img-fluid">
+              <img decoding="async" src="images/img-2.png" class="img-fluid">
             </div>
           </div>
         </div>
@@ -225,7 +225,7 @@
         <div class="row pt-5">
           <div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
             <div class="card border">
-              <img decoding="async" src="images/img/img-3.jpg" class="img-fluid">
+              <img decoding="async" src="images/img-3.jpg" class="img-fluid">
               <div class="pt-3">
                 <h4>vegetable sandwich</h4>
                 <p>Time: 15 - 20 Minutes | Serves: 1</p>
@@ -236,7 +236,7 @@
           </div>
           <div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
             <div class="card border">
-              <img decoding="async" src="images/img/img-4.jpg" class="img-fluid">
+              <img decoding="async" src="images/img-4.jpg" class="img-fluid">
               <div class="pt-3">
                 <h4>Rainbow vegetarian Burger</h4>
                 <p>Time: 30 - 45 Minutes | Serves: 1</p>
@@ -247,7 +247,7 @@
           </div>
           <div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
             <div class="card border">
-              <img decoding="async" src="images/img/img-5.jpg" class="img-fluid">
+              <img decoding="async" src="images/img-5.jpg" class="img-fluid">
               <div class="pt-3">
                 <h4>Raspberry Stuffed French Toast</h4>
                 <p>Time: 10 - 15 Minutes | Serves: 1</p>
@@ -283,7 +283,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <div class="carousel-caption">
-                    <img decoding="async" src="images/review/review-1.jpg">
+                    <img decoding="async" src="images/review-1.jpg">
                     <p>"Great experience! Delicious food, diverse menu,
                        excellent service, and lovely ambiance. Can't wait to come back! "</p>
                     <h5>Johnthan Doe - UX Designer</h5>
@@ -291,7 +291,7 @@
                 </div>
                 <div class="carousel-item">
                   <div class="carousel-caption">
-                    <img decoding="async" src="images/review/review-2.jpg">
+                    <img decoding="async" src="images/review-2.jpg">
                     <p>
                       "Fantastic experience! Delicious food, diverse menu, excellent service,
                        and great ambiance. Can't wait to come back!"
@@ -301,7 +301,7 @@
                 </div>
                 <div class="carousel-item">
                   <div class="carousel-caption">
-                    <img decoding="async" src="images/review/review-1.jpg">
+                    <img decoding="async" src="images/review-1.jpg">
                     <p>
                       "Absolutely loved the dining experience at this place! The food was divine, bursting with flavors that left me craving for more. 
                       The menu is so diverse; it's a real treat for food enthusiasts."
